--- a/style.css
+++ b/style.css
@@ -137,12 +137,14 @@ html, body {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  z-index: 1;
+  margin: 0px;
   padding: 0px;
   width: 100%;
   height: 100px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,.5);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
