--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body {
   padding: 0;
   font-family: Raleway;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 /* NAV HEADER */
@@ -184,7 +185,7 @@ html, body {
 
 .consult-button {
   margin-top: 30px;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.5);
   border: 2px solid rgba(255,255,255,0.5);
   padding: 10px;
   width: 35%;
@@ -196,7 +197,7 @@ html, body {
 }
 
 .consult-button:hover {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.1);
   cursor: pointer;
 } 
 
