--- a/style.css
+++ b/style.css
@@ -333,3 +333,32 @@ html, body {
   grid-template-columns: 1fr;
 
 }
+
+.footer {
+  position: fixed;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 75px;
+  background-color: rgba(0,0,0,.5);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.svg {
+  font-size: 2rem;
+  padding: 0;
+  margin-top: 10px;
+}
+
+
+.labels {
+  font-size: .6rem;
+  text-transform: uppercase;
+}
