--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: Raleway;
   scroll-behavior: smooth;
-  overflow: hidden;
+  font-family: Raleway;
 }
 
 /* NAV HEADER */
+
 
 .hidden {
   display: none;
@@ -23,7 +23,8 @@ html, body {
 .navhead-large {
   padding: 0;
   margin: 0;
-  margin-left: 20px;
+  margin-left: 30px;
+  margin-top: 5px;
   box-sizing: border-box;
   color: white;
 }
@@ -40,7 +41,7 @@ html, body {
   height: 75px;
   display: flex;
   flex-direction: row-reverse;
-  background-color: rgba(0,0,0,.5);
+  background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,0));
   align-items: center;
   color: white;
   overflow: hidden;
@@ -51,9 +52,9 @@ html, body {
 .navbar ul {
   display: flex;
   justify-content: space-between;
-  width: 50%;
+  min-width: 30%;
   margin-right: 20px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .navbar li {
@@ -86,7 +87,7 @@ html, body {
 
 
 .hero{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("bg1.jpg");
+  background-image: url("bg2.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -95,6 +96,15 @@ html, body {
   display: flex;
   animation: fadeIn;
   animation-duration: 1s;
+  overflow: hidden;
+}
+
+.layer {
+  background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: inline;
 }
 
 .hero2{
@@ -116,37 +126,16 @@ html, body {
 
 
 .hero-container {
-  margin: auto;
-  margin-top: 150px;
-  width: 90%;
-  text-align: center;
+  width: 75%;
+  position: absolute;
+  top: 150px;
+  text-align: left;
   color: white;
-  overflow: hidden;
+  margin-left: 30px;
 }
 
-
-.hero-header{
-  margin-top: 0px;
-  color: white;
-  font-size: 1.5em;
-  text-shadow: 2px 2px 0px rgba(0,0,0, 1);
-
-}
-.hero-header h1{
-  text-align: center;
-  margin-top: 0px;
-  font-size: 2.5em;
-  text-transform: uppercase;
-}
-
-.hero-paragraph {
-  padding: 0;
-  width: 100%;
-}
-
-.hero-paragraph p {
-  font-size: 1.2em;
-  text-shadow: 2px 1px 0px rgba(0,0,0, 1);
+.hero-container h1{
+  font-size: 3rem;
 }
 
 .footer {
@@ -192,8 +181,8 @@ html, body {
 /* BUTTON STUFF */
 
 .consult-button {
-  margin-top: 30px;
-  background-color: rgba(0,0,0,0.5);
+  margin-top: 20px;
+  background-color: rgba(0,0,0,0.0);
   border: 2px solid rgba(255,255,255,0.5);
   padding: 10px;
   width: 35%;
@@ -202,6 +191,7 @@ html, body {
   font-family: Raleway;
   text-shadow: 2px 2px 2px rgba(0,0,0, 1);
   text-transform: uppercase;
+  display: none;
 }
 
 .consult-button:hover {
@@ -227,11 +217,7 @@ html, body {
 }
 
 .test {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-  height: 100%;
-  width: 100%;
+  background-color: black;
 }
 
 .down-arrow {
@@ -242,6 +228,85 @@ html, body {
   margin-right: 10px;
   
 }
+
+/* CLIENTS */
+
+.services {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  background-color: black;
+  color: white;
+  align-content: center;
+  justify-content: left;
+
+}
+.services h1 {
+  font-family: Raleway;
+  margin: 0;
+  padding: 10px;
+  padding-left: 0px;
+  display: inline-flex;
+  margin-left: 30px;
+}
+
+}
+.clients {
+  margin-top: 30px;
+}
+
+.clients h1{
+  text-align: center;
+  margin: 0;
+  text-shadow: 2px 5px 10px rgba(0,0,0, .5)
+}
+
+.clients p {
+  text-align: center;
+}
+
+.clients-grid {
+  position: fixed;
+  bottom: 10px;
+  margin:0;
+  padding: 0;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 25px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+  text-shadow: 1px 2px 3px rgba(0,0,0, .2)
+
+
+
+}
+
+.clients-grid p {
+  font-size: 1rem;
+  color: white;
+}
+
+.client-box {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 3rem;
+  color: white;
+
+}
+
+.client-box h2{
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 1.5rem;
+  color: white;
+
+}
+
+
 
 /* DROP DOWN */
 .animate-drop-down {
@@ -271,8 +336,8 @@ html, body {
 
 .dropnav {
   display: block;
-  margin-right: 60px;
-  margin-top: 20px;
+  margin-right: 30px;
+  margin-top: 30px;
   z-index: 3;
 }
 
@@ -312,6 +377,7 @@ html, body {
   animation-timing-function: ease-out;
 }
 
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -333,15 +399,15 @@ html, body {
 @keyframes dropUp{
     from{
 
-        height: 200px;
+        height: 220px;
         width: 100%;
-        background-color: rgba(0,0,0,.5);
+        background-color: rgba(0,0,0,1);
 
     }
     to{
         height: 50px;
         width: 100%;
-        background-color: rgba(0,0,0,1);
+        background-color: rgba(0,0,0,0);
     }
 }
 
@@ -351,11 +417,11 @@ html, body {
 
         height: 50px;
         width: 100%;
-        background-color: rgba(0,0,0,.5);
+        background-color: rgba(0,0,0,0);
 
     }
     to{
-        height: 200px;
+        height: 220px;
         width: 100%;
         background-color: rgba(0,0,0,1);
     }
@@ -376,37 +442,34 @@ html, body {
 .learn-button {
   display: none;
 }
-
-.hero {
-  text-align: center;
-}
-
 .hero-container {
-  width: 90%;
-  margin-top: 60px;
-  text-align: center;
-  color: white;
-  overflow: hidden;
-  margin-left: 25px;
-  margin-right: 25px;
-}
-
-.hero-header{
-  color: white;
-  font-size: 1.5em;
-  text-shadow: 2px 2px 1px rgba(0,0,0, 0.5);
-}
-.hero-header h1{
-  font-size: 1.5em;
-  text-transform: uppercase;
-
-}
-
-.hero-paragraph {
-  margin-top: 55px;
+  margin:0;
   padding: 0;
   width: 90%;
+  text-align: center;
+  color: white;
+  position: relative;
+  top: 100px;
+  margin: auto;
 }
+
+.hero-container h1{
+  margin: 0;
+  padding: 0;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 1px rgba(0,0,0, 0.5);
+  margin-top: 20px;
+
+
+}
+
+.hero-container p {
+  margin: 0;
+  padding: 0;
+  margin-top: 50px;
+}
+
 
 
 .hero-paragraph p {
@@ -416,6 +479,7 @@ html, body {
 }
 
 .consult-button {
+  display: inline-block;
   background-color: rgba(0,0,0,0.1);
   border: 2px solid rgba(255,255,255,0.5);
   padding: 10px;
@@ -425,7 +489,7 @@ html, body {
   font-family: Raleway;
   text-shadow: 2px 2px 2px rgba(0,0,0, 1);
   text-transform: uppercase;
-  margin-top: 20px;
+  margin-top: 75px;
   margin-bottom: 75px;
 }
 
@@ -528,5 +592,56 @@ html, body {
   
 }
 
+body {
+  background-color: white;
+}
+
+.clients {
+  margin-top: 30px;
+}
+
+.clients h1{
+  text-align: center;
+  margin: 0;
+
+}
+
+.clients p {
+  text-align: center;
+}
+
+.clients-grid {
+  position: fixed;
+  width: 100%;
+  bottom: 10px;
+  margin:0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 0px;
 
 
+}
+
+.clients-grid p {
+  display: none;
+}
+
+.client-box {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 2.5rem;
+    color: white;
+
+}
+
+.client-box h2{
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: .8rem;
+  color: white;
+
+
+}
